--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="remove_from_list">Remove from list?</string>
     <string name="remove">Remove</string>
     <string name="edit_script">Edit the script</string>
+    <string name="stop_script">Stop script</string>
 </resources>
